# cc_test

./: .gitignore  CMakeLists.txt  Makefile  Makefile_test1  Makefile_test2  Makefile_v1  Makefile_v2  README.md  debian.sh  main.cpp
command/: CMakeLists.txt  debian.sh  main.cpp
command/include/: remote.h
command/include/command/: command.h  light_on_cmd.h
command/include/commands/: ceil_fan_cmd.h  command.h  light_cmd.h  light_off_cmd.h  light_on_cmd.h  no_cmd.h
command/include/devices/: ceil_fan.h  light.h
command/src/: remote.cpp
command/src/commands/: ceil_fan_cmd.cpp  light_cmd.cpp  light_off_cmd.cpp  light_on_cmd.cpp  no_cmd.cpp
command/src/devices/: ceil_fan.cpp  light.cpp
factory_method/: CMakeLists.txt  main.cpp  makefile.bak
factory_method/include/: pizza.h  pizza_store.h
factory_method/include/pizza/: ccg_cheese_pizza.h  ny_cheese_pizza.h  pizza.h
factory_method/src/: pizza_store.cpp
factory_method/src/pizza/: ccg_cheese_pizza.cpp  ny_cheese_pizza.cpp  pizza.cpp
function/: display.cpp
inc/: hello_func.h
src/: CMakeLists.txt  hello_func.c  hello_main.c
src/function/: display.h
